--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/small_space">
+    android:layout_margin="@dimen/small_space">
 
     <TextView
         android:id="@+id/tv_practice_date"
