--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -10,8 +10,16 @@
         android:id="@+id/chart_history"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_weight="4.5"
         android:padding="@dimen/medium_space"></com.github.mikephil.charting.charts.LineChart>
+
+    <TextView
+        android:id="@+id/tv_calories_burn_a_day"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textSize="@dimen/normal_text_size"/>
 
     <View
         android:layout_width="match_parent"
@@ -21,7 +29,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_weight="4.5"
         android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
