--- a/app/src/main/res/layout/dialog_user_info.xml
+++ b/app/src/main/res/layout/dialog_user_info.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/user_info_dialog_width"
     android:layout_height="wrap_content"
@@ -60,7 +59,8 @@
         android:layout_marginTop="@dimen/medium_space"
         android:hint="@string/height"
         android:drawableLeft="@drawable/height"
-        android:drawablePadding="@dimen/small_space"/>
+        android:drawablePadding="@dimen/small_space"
+        android:inputType="number"/>
 
     <EditText
         android:id="@+id/edt_weight"
@@ -69,7 +69,8 @@
         android:layout_marginTop="@dimen/medium_space"
         android:hint="@string/weight"
         android:drawableLeft="@drawable/scale"
-        android:drawablePadding="@dimen/small_space"/>
+        android:drawablePadding="@dimen/small_space"
+        android:inputType="number"/>
 
     <Button
         android:id="@+id/btn_confirm"
