--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/large_space"
             android:gravity="center_horizontal"
-            android:text="@string/update_height_weight"
+            android:text="@string/update_info"
             android:textStyle="italic"/>
 
         <TextView
