--- a/app/src/main/res/layout/dialog_user_info.xml
+++ b/app/src/main/res/layout/dialog_user_info.xml
@@ -1,82 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/user_info_dialog_width"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/large_space"
     tools:context="vn.com.hieptt149.workoutmanager.login.UserInfoDialog">
 
-    <TextView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="@dimen/user_info_dialog_width"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="Enter your information"
-        android:textSize="@dimen/big_text_size"
-        android:textStyle="bold" />
+        android:orientation="vertical"
+        android:padding="@dimen/large_space">
 
-    <RadioGroup
-        android:id="@+id/rdgr_gender"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_space"
-        android:orientation="horizontal"
-        android:gravity="center">
-        <RadioButton
-            android:id="@+id/rdbtn_male"
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/male"/>
-        <RadioButton
-            android:id="@+id/rdbtn_female"
-            android:layout_width="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Enter your information"
+            android:textSize="@dimen/big_text_size"
+            android:textStyle="bold" />
+
+        <RadioGroup
+            android:id="@+id/rdgr_gender"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/female"/>
-    </RadioGroup>
+            android:layout_marginTop="@dimen/medium_space"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/edt_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_space"
-        android:hint="@string/name"
-        android:drawableLeft="@drawable/name"
-        android:drawablePadding="@dimen/small_space"/>
+            <RadioButton
+                android:id="@+id/rdbtn_male"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/male" />
 
-    <EditText
-        android:id="@+id/edt_age"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_space"
-        android:hint="@string/age"
-        android:drawableLeft="@drawable/age"
-        android:drawablePadding="@dimen/small_space"
-        android:inputType="number"/>
+            <RadioButton
+                android:id="@+id/rdbtn_female"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/female" />
+        </RadioGroup>
 
-    <EditText
-        android:id="@+id/edt_height"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_space"
-        android:hint="@string/height"
-        android:drawableLeft="@drawable/height"
-        android:drawablePadding="@dimen/small_space"
-        android:inputType="number"/>
+        <EditText
+            android:id="@+id/edt_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/medium_space"
+            android:drawableLeft="@drawable/name"
+            android:drawablePadding="@dimen/small_space"
+            android:hint="@string/name" />
 
-    <EditText
-        android:id="@+id/edt_weight"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_space"
-        android:hint="@string/weight"
-        android:drawableLeft="@drawable/scale"
-        android:drawablePadding="@dimen/small_space"
-        android:inputType="number"/>
+        <EditText
+            android:id="@+id/edt_age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/medium_space"
+            android:drawableLeft="@drawable/age"
+            android:drawablePadding="@dimen/small_space"
+            android:hint="@string/age"
+            android:inputType="number" />
 
-    <Button
-        android:id="@+id/btn_confirm"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_space"
-        android:text="@string/confirm" />
+        <EditText
+            android:id="@+id/edt_height"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/medium_space"
+            android:drawableLeft="@drawable/height"
+            android:drawablePadding="@dimen/small_space"
+            android:hint="@string/height"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/edt_weight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/medium_space"
+            android:drawableLeft="@drawable/scale"
+            android:drawablePadding="@dimen/small_space"
+            android:hint="@string/weight"
+            android:inputType="number" />
+
+        <Button
+            android:id="@+id/btn_confirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/medium_space"
+            android:text="@string/confirm" />
+    </LinearLayout>
 </LinearLayout>
