--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -203,7 +203,7 @@
             <LinearLayout
                 android:id="@+id/ln_exercises_info"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:weightSum="10">
 
@@ -239,17 +239,16 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignTop="@+id/view"
-                    android:layout_marginTop="@dimen/small_space"
-                    android:layout_weight="8">
+                    android:layout_marginTop="@dimen/small_space">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv_preview_selected_exercise"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
                 </LinearLayout>
             </LinearLayout>
