--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -86,28 +86,28 @@
             android:layout_height="1dp"
             android:background="@android:color/darker_gray" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/item_height"
-            android:orientation="horizontal"
-            android:padding="@dimen/medium_space"
-            android:weightSum="10">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="@dimen/item_height"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:padding="@dimen/medium_space"-->
+            <!--android:weightSum="10">-->
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="8"
-                android:gravity="center_vertical"
-                android:text="@string/sound"
-                android:textSize="@dimen/normal_text_size" />
+            <!--<TextView-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="8"-->
+                <!--android:gravity="center_vertical"-->
+                <!--android:text="@string/sound"-->
+                <!--android:textSize="@dimen/normal_text_size" />-->
 
-            <Switch
-                android:id="@+id/sw_sounds"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:gravity="center_vertical|right" />
-        </LinearLayout>
+            <!--<Switch-->
+                <!--android:id="@+id/sw_sounds"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="2"-->
+                <!--android:gravity="center_vertical|right" />-->
+        <!--</LinearLayout>-->
 
         <View
             android:layout_width="match_parent"
