--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,6 @@
         <item name="android:background">?android:attr/listDivider</item>
     </style>
 
+    <style name="Widget.GifView" parent="@android:style/Widget"/>
+
 </resources>
