--- a/app/src/main/res/layout/fragment_start_workout.xml
+++ b/app/src/main/res/layout/fragment_start_workout.xml
@@ -7,11 +7,12 @@
     android:weightSum="10"
     tools:context="vn.com.hieptt149.workoutmanager.workoutdetails.fragment.StartWorkoutFragment">
 
-    <ImageView
-        android:id="@+id/iv_exercise_preview"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_exercise_preview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5" />
+        android:layout_weight="5"
+        android:orientation="vertical"/>
 
     <TextView
         android:id="@+id/tv_exercise_name"
