--- a/app/src/main/res/layout/fragment_exercise_preview.xml
+++ b/app/src/main/res/layout/fragment_exercise_preview.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/medium_space"
     tools:context=".workoutdetails.fragment.ExercisePreviewFragment">
 
     <vn.com.hieptt149.workoutmanager.utils.GifView
