--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,11 @@
             android:textStyle="bold" />
     </android.support.v7.widget.Toolbar>
 
-    <android.support.v4.view.ViewPager
+    <vn.com.hieptt149.workoutmanager.utils.CustomViewPager
         android:id="@+id/vp_app_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"></android.support.v4.view.ViewPager>
+        android:layout_weight="8"></vn.com.hieptt149.workoutmanager.utils.CustomViewPager>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_nav"
