--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -13,13 +13,18 @@
         android:layout_weight="4.5"
         android:padding="@dimen/medium_space"></com.github.mikephil.charting.charts.LineChart>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
+
     <TextView
         android:id="@+id/tv_calories_burn_a_day"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
     <View
         android:layout_width="match_parent"
