--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorOrange">#E65100</color>
     <color name="colorGrey">#424242</color>
     <color name="colorRed">#F44336</color>
+    <color name="itemFocused">#CFD8DC</color>
 </resources>
