--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -10,8 +10,11 @@
         android:id="@+id/chart_history"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4.5"
-        android:padding="@dimen/medium_space"></com.github.mikephil.charting.charts.LineChart>
+        android:layout_weight="5"
+        android:paddingTop="@dimen/large_space"
+        android:paddingLeft="@dimen/medium_space"
+        android:paddingRight="@dimen/medium_space"
+        android:paddingBottom="@dimen/medium_space"></com.github.mikephil.charting.charts.LineChart>
 
     <View
         android:layout_width="match_parent"
@@ -34,7 +37,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4.5"
+        android:layout_weight="4"
         android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
