--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -9,39 +9,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/small_space">
+        android:layout_margin="@dimen/medium_space"
+        android:paddingTop="@dimen/small_space"
+        android:paddingBottom="@dimen/small_space"
+        android:paddingLeft="@dimen/large_space"
+        android:paddingRight="@dimen/large_space">
 
         <TextView
             android:id="@+id/tv_practice_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="@dimen/big_text_size"
-            android:textStyle="bold" />
+            android:textSize="@dimen/normal_text_size"
+            android:textStyle="bold"
+            android:singleLine="true"
+            android:ellipsize="marquee"/>
 
         <TextView
             android:id="@+id/tv_workout_times"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/normal_text_size" />
+            android:textSize="@dimen/normal_text_size"
+            android:singleLine="true"
+            android:ellipsize="marquee"/>
 
         <TextView
             android:id="@+id/tv_calories_burn"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/normal_text_size" />
+            android:textSize="@dimen/normal_text_size"
+            android:singleLine="true"
+            android:ellipsize="marquee"/>
 
-        <TextView
-            android:id="@+id/tv_height"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/normal_text_size" />
+        <!--<TextView-->
+            <!--android:id="@+id/tv_height"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="@dimen/normal_text_size" />-->
 
-        <TextView
-            android:id="@+id/tv_weight"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/normal_text_size" />
+        <!--<TextView-->
+            <!--android:id="@+id/tv_weight"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="@dimen/normal_text_size" />-->
     </LinearLayout>
 
 </LinearLayout>
