--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorOrange">#E65100</color>
+    <color name="colorLightOrange">#FFE082</color>
     <color name="colorGrey">#424242</color>
     <color name="colorRed">#F44336</color>
     <color name="itemFocused">#CFD8DC</color>
