--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <!--<item name="android:textViewStyle">@style/MyTextViewStyle</item>-->
     </style>
 
     <style name="Divider">
@@ -13,6 +14,10 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">?android:attr/listDivider</item>
     </style>
+
+    <!--<style name="MyTextViewStyle">-->
+        <!--<item name="android:textColor">@color/colorOrange</item>-->
+    <!--</style>-->
 
     <style name="Widget.GifView" parent="@android:style/Widget"/>
 
