--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,9 @@
                 android:layout_height="@dimen/item_height"
                 android:layout_marginTop="@dimen/medium_space"
                 android:text="@string/login"
-                android:textSize="@dimen/normal_text_size" />
+                android:textSize="@dimen/normal_text_size"
+                android:background="@drawable/bg_button"
+                android:textColor="@android:color/white"/>
 
             <TextView
                 android:id="@+id/tv_forgot_password"
