--- a/app/src/main/res/layout/dialog_fragment_update_user_info.xml
+++ b/app/src/main/res/layout/dialog_fragment_update_user_info.xml
@@ -51,6 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_space"
-            android:text="@string/confirm" />
+            android:text="@string/confirm"
+            android:background="@drawable/bg_button"
+            android:textColor="@android:color/white"/>
     </LinearLayout>
 </LinearLayout>
