--- a/app/src/main/res/layout/dialog_user_info.xml
+++ b/app/src/main/res/layout/dialog_user_info.xml
@@ -85,6 +85,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_space"
-            android:text="@string/confirm" />
+            android:text="@string/confirm"
+            android:textColor="@android:color/white"
+            android:background="@drawable/bg_button"/>
     </LinearLayout>
 </LinearLayout>
