--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,8 +1,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".home.fragment.SettingsFragment">
 
     <LinearLayout
@@ -15,54 +15,84 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/user_setting_item_height"
             android:orientation="horizontal"
-            android:weightSum="10"
-            android:padding="@dimen/small_space">
+            android:padding="@dimen/small_space"
+            android:weightSum="10">
+
             <ImageView
                 android:id="@+id/iv_user_avatar"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="3"
-                android:src="@drawable/avatar"
-                android:layout_gravity="center_vertical"/>
+                android:src="@drawable/avatar" />
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="7"
-                android:paddingLeft="@dimen/medium_space"
                 android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/medium_space">
+
                 <TextView
                     android:id="@+id/tv_users_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/name"
-                    android:singleLine="true"
                     android:ellipsize="marquee"
-                    android:textSize="@dimen/normal_text_size"/>
+                    android:singleLine="true"
+                    android:text="@string/name"
+                    android:textSize="@dimen/normal_text_size" />
+
                 <TextView
                     android:id="@+id/tv_users_age"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="marquee"
+                    android:singleLine="true"
                     android:text="@string/age"
-                    android:textSize="@dimen/normal_text_size"/>
+                    android:textSize="@dimen/normal_text_size" />
+
                 <TextView
                     android:id="@+id/tv_users_gender"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="marquee"
+                    android:singleLine="true"
                     android:text="@string/gender"
-                    android:textSize="@dimen/normal_text_size"/>
+                    android:textSize="@dimen/normal_text_size" />
+
                 <TextView
                     android:id="@+id/tv_users_height"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="marquee"
+                    android:singleLine="true"
                     android:text="@string/height"
-                    android:textSize="@dimen/normal_text_size"/>
-                <TextView
-                    android:id="@+id/tv_users_weight"
+                    android:textSize="@dimen/normal_text_size" />
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/weight"
-                    android:textSize="@dimen/normal_text_size"/>
+                    android:orientation="horizontal"
+                    android:weightSum="10">
+
+                    <TextView
+                        android:id="@+id/tv_users_weight"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="8"
+                        android:ellipsize="marquee"
+                        android:singleLine="true"
+                        android:text="@string/weight"
+                        android:textSize="@dimen/normal_text_size" />
+
+                    <ImageView
+                        android:id="@+id/iv_weight_chart"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2"
+                        android:src="@drawable/analytics" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
@@ -73,7 +103,7 @@
             android:layout_marginBottom="@dimen/large_space"
             android:gravity="center_horizontal"
             android:text="@string/update_info"
-            android:textStyle="italic"/>
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/tv_change_password"
@@ -82,31 +112,30 @@
             android:layout_marginBottom="@dimen/large_space"
             android:gravity="center_horizontal"
             android:text="@string/change_password"
-            android:textStyle="italic"/>
-
+            android:textStyle="italic" />
 
 
         <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="@dimen/item_height"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:padding="@dimen/medium_space"-->
-            <!--android:weightSum="10">-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/item_height"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:padding="@dimen/medium_space"-->
+        <!--android:weightSum="10">-->
 
-            <!--<TextView-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="8"-->
-                <!--android:gravity="center_vertical"-->
-                <!--android:text="@string/sound"-->
-                <!--android:textSize="@dimen/normal_text_size" />-->
+        <!--<TextView-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="8"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:text="@string/sound"-->
+        <!--android:textSize="@dimen/normal_text_size" />-->
 
-            <!--<Switch-->
-                <!--android:id="@+id/sw_sounds"-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="2"-->
-                <!--android:gravity="center_vertical|right" />-->
+        <!--<Switch-->
+        <!--android:id="@+id/sw_sounds"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="2"-->
+        <!--android:gravity="center_vertical|right" />-->
         <!--</LinearLayout>-->
 
         <View
@@ -172,31 +201,31 @@
         </LinearLayout>
 
         <!--<View-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="1dp"-->
-            <!--android:background="@android:color/darker_gray" />-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="@android:color/darker_gray" />-->
 
         <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="@dimen/item_height"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:padding="@dimen/medium_space"-->
-            <!--android:weightSum="10">-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/item_height"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:padding="@dimen/medium_space"-->
+        <!--android:weightSum="10">-->
 
-            <!--<TextView-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="6"-->
-                <!--android:gravity="center_vertical"-->
-                <!--android:text="@string/themes"-->
-                <!--android:textSize="@dimen/normal_text_size" />-->
+        <!--<TextView-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="6"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:text="@string/themes"-->
+        <!--android:textSize="@dimen/normal_text_size" />-->
 
-            <!--<Spinner-->
-                <!--android:id="@+id/spn_themes"-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_weight="4"-->
-                <!--android:gravity="center_vertical|right"></Spinner>-->
+        <!--<Spinner-->
+        <!--android:id="@+id/spn_themes"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="4"-->
+        <!--android:gravity="center_vertical|right"></Spinner>-->
 
         <!--</LinearLayout>-->
 
