--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorGrey">#424242</color>
     <color name="colorRed">#F44336</color>
     <color name="itemFocused">#CFD8DC</color>
+    <color name="colorDeepPurple">#6200EA</color>
 </resources>
