--- a/app/src/main/res/layout/dialog_fragment_weight_history.xml
+++ b/app/src/main/res/layout/dialog_fragment_weight_history.xml
@@ -9,12 +9,24 @@
         android:layout_width="300dp"
         android:layout_height="400dp"
         android:orientation="vertical"
-        android:padding="@dimen/small_space">
+        android:padding="@dimen/small_space"
+        android:weightSum="10">
 
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/chart_weight"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp"
+            android:layout_weight="9.2"
+            android:clipChildren="false"
+            android:clipToPadding="false" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:text="@string/click_chart_item"
+            android:gravity="center"
+            android:textStyle="italic"/>
     </LinearLayout>
+
 
 </LinearLayout>
