--- a/app/src/main/res/layout/dialog_fragment_weight_history.xml
+++ b/app/src/main/res/layout/dialog_fragment_weight_history.xml
@@ -20,6 +20,7 @@
             android:clipChildren="false"
             android:clipToPadding="false" />
         <TextView
+            android:id="@+id/tv_click_item"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.8"
