--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -95,7 +95,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/small_space"
+                android:layout_marginTop="@dimen/large_space"
                 android:text="@string/forgot_password"
                 android:textSize="@dimen/normal_text_size"
                 android:textStyle="italic" />
@@ -105,7 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/small_space"
+                android:layout_marginTop="@dimen/medium_space"
                 android:text="@string/back"
                 android:textSize="@dimen/normal_text_size"
                 android:textStyle="italic" />
