--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,8 @@
                 android:drawableLeft="@drawable/envelope"
                 android:drawablePadding="@dimen/small_space"
                 android:hint="@string/email"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:backgroundTint="@android:color/transparent"/>
 
             <EditText
                 android:id="@+id/edt_password"
@@ -56,7 +57,8 @@
                 android:drawablePadding="@dimen/small_space"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:backgroundTint="@android:color/transparent"/>
 
             <RadioGroup
                 android:id="@+id/rdgr_login_register"
