--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#E65100</color>
+    <color name="colorPrimaryDark">#a73b00</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorOrange">#E65100</color>
     <color name="colorLightOrange">#FFE082</color>
@@ -9,4 +9,6 @@
     <color name="colorRed">#F44336</color>
     <color name="colorDeepPurple">#6200EA</color>
     <color name="itemFocused">#CFD8DC</color>
+    <color name="colorBlue">#2fd6d0</color>
+    <color name="colorBlueDark">#3F51B5</color>
 </resources>
