--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="colorDeepPurple">#6200EA</color>
     <color name="itemFocused">#CFD8DC</color>
     <color name="colorBlue">#2fd6d0</color>
-    <color name="colorBlueDark">#3F51B5</color>
+    <color name="colorBlueDark">#5a73ff</color>
 </resources>
