--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:overScrollMode="never"
     tools:context="vn.com.hieptt149.workoutmanager.login.LoginActivity">
 
     <LinearLayout
@@ -46,7 +47,8 @@
                 android:drawablePadding="@dimen/small_space"
                 android:hint="@string/email"
                 android:singleLine="true"
-                android:backgroundTint="@android:color/transparent"/>
+                android:backgroundTint="@color/colorPrimary"
+                android:textCursorDrawable="@color/colorPrimaryDark"/>
 
             <EditText
                 android:id="@+id/edt_password"
@@ -58,7 +60,8 @@
                 android:hint="@string/password"
                 android:inputType="textPassword"
                 android:singleLine="true"
-                android:backgroundTint="@android:color/transparent"/>
+                android:backgroundTint="@color/colorPrimary"
+                android:textCursorDrawable="@color/colorPrimaryDark"/>
 
             <RadioGroup
                 android:id="@+id/rdgr_login_register"
@@ -73,13 +76,15 @@
                     android:id="@+id/rdbtn_login"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="@string/login" />
+                    android:text="@string/login"
+                    android:buttonTint="@color/colorPrimary"/>
 
                 <RadioButton
                     android:id="@+id/rdbtn_register"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="@string/register" />
+                    android:text="@string/register"
+                    android:buttonTint="@color/colorPrimary"/>
             </RadioGroup>
 
             <Button
@@ -89,7 +94,7 @@
                 android:layout_marginTop="@dimen/medium_space"
                 android:text="@string/login"
                 android:textSize="@dimen/normal_text_size"
-                android:background="@drawable/bg_button"
+                android:background="@drawable/bg_blue_gradient"
                 android:textColor="@android:color/white"/>
 
             <TextView
