--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:overScrollMode="never"
     tools:context="vn.com.hieptt149.workoutmanager.workoutdetails.fragment.WorkoutDetailsFragment">
 
     <LinearLayout
@@ -30,7 +31,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="7"
                     android:gravity="center"
-                    android:text="@string/cardio"
+                    android:text="@string/cardioRate"
                     android:textSize="@dimen/normal_text_size" />
 
                 <ProgressBar
@@ -136,7 +137,9 @@
                     android:focusableInTouchMode="true"
                     android:gravity="center"
                     android:hint="Workout Name"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+
+                    android:textCursorDrawable="@color/colorPrimaryDark" />
 
                 <LinearLayout
                     android:id="@+id/ln_btn_save_delete"
@@ -272,7 +275,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/large_space"
-            android:background="@drawable/bg_button"
+            android:background="@drawable/bg_blue_gradient"
             android:padding="@dimen/medium_space"
             android:text="@string/add_exercise"
             android:textColor="@android:color/white" />
