--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,18 +39,17 @@
                 android:textStyle="bold" />
 
             <EditText
+                style="@style/MyEditText"
                 android:id="@+id/edt_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/medium_space"
                 android:drawableLeft="@drawable/envelope"
                 android:drawablePadding="@dimen/small_space"
-                android:hint="@string/email"
-                android:singleLine="true"
-                android:backgroundTint="@color/colorPrimary"
-                android:textCursorDrawable="@color/colorPrimaryDark"/>
+                android:hint="@string/email"/>
 
             <EditText
+                style="@style/MyEditText"
                 android:id="@+id/edt_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,10 +57,7 @@
                 android:drawableLeft="@drawable/key"
                 android:drawablePadding="@dimen/small_space"
                 android:hint="@string/password"
-                android:inputType="textPassword"
-                android:singleLine="true"
-                android:backgroundTint="@color/colorPrimary"
-                android:textCursorDrawable="@color/colorPrimaryDark"/>
+                android:inputType="textPassword"/>
 
             <RadioGroup
                 android:id="@+id/rdgr_login_register"
@@ -93,9 +89,7 @@
                 android:layout_height="@dimen/item_height"
                 android:layout_marginTop="@dimen/medium_space"
                 android:text="@string/login"
-                android:textSize="@dimen/normal_text_size"
-                android:background="@drawable/bg_blue_gradient"
-                android:textColor="@android:color/white"/>
+                style="@style/MyButton"/>
 
             <TextView
                 android:id="@+id/tv_forgot_password"
