--- a/app/src/main/res/layout/dialog_fragment_update_user_info.xml
+++ b/app/src/main/res/layout/dialog_fragment_update_user_info.xml
@@ -32,6 +32,7 @@
 
         <EditText
             android:id="@+id/edt_old"
+            style="@style/MyEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_space"
@@ -40,6 +41,7 @@
 
         <EditText
             android:id="@+id/edt_new"
+            style="@style/MyEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_space"
@@ -52,7 +54,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_space"
             android:text="@string/confirm"
-            android:background="@drawable/bg_button"
-            android:textColor="@android:color/white"/>
+            style="@style/MyButton"/>
     </LinearLayout>
 </LinearLayout>
