--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -138,8 +138,7 @@
                     android:gravity="center"
                     android:hint="Workout Name"
                     android:singleLine="true"
-
-                    android:textCursorDrawable="@color/colorPrimaryDark" />
+                    android:textCursorDrawable="@null"/>
 
                 <LinearLayout
                     android:id="@+id/ln_btn_save_delete"
@@ -275,10 +274,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/large_space"
-            android:background="@drawable/bg_blue_gradient"
             android:padding="@dimen/medium_space"
             android:text="@string/add_exercise"
-            android:textColor="@android:color/white" />
+            style="@style/MyButton"/>
     </LinearLayout>
 
 </ScrollView>
