--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -15,10 +15,18 @@
         <item name="android:background">?android:attr/listDivider</item>
     </style>
 
-    <!--<style name="MyTextViewStyle">-->
-        <!--<item name="android:textColor">@color/colorOrange</item>-->
-    <!--</style>-->
+    <style name="MyEditText" parent="@android:style/Widget.EditText">
+        <item name="android:singleLine">true</item>
+        <item name="backgroundTint">@color/colorPrimary</item>
+        <item name="android:textCursorDrawable">@null</item>
+    </style>
 
-    <style name="Widget.GifView" parent="@android:style/Widget"/>
+    <style name="MyButton" parent="@android:style/Widget.Button">
+        <item name="android:background">@drawable/bg_blue_gradient</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
+    </style>
+
+    <style name="Widget.GifView" parent="@android:style/Widget" />
 
 </resources>
