--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -11,10 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"
-        android:paddingTop="@dimen/large_space"
+        android:paddingBottom="@dimen/medium_space"
         android:paddingLeft="@dimen/medium_space"
         android:paddingRight="@dimen/medium_space"
-        android:paddingBottom="@dimen/medium_space"></com.github.mikephil.charting.charts.LineChart>
+        android:paddingTop="@dimen/large_space"></com.github.mikephil.charting.charts.LineChart>
 
 
     <TextView
@@ -39,6 +39,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_history"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent"
+            android:overScrollMode="never"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
 </LinearLayout>
